Added scalar and query parameter to switch between both api documentation tools
