# src/pkg/server/handler/apihandler/info.go
@@ -3,6 +3,7 @@ package apihandler
 import (
 	_ "embed"
 	"html/template"
+	server "linuxcode/inventory_manager/pkg/server/generated"
 	"net/http"
 
 	"github.com/go-chi/render"
@@ -15,8 +16,11 @@ import (
 //go:embed embedded/openapi.json
 var openapiJSON []byte
 
-//go:embed embedded/openapi.html
-var openapiHTML []byte
+//go:embed embedded/scalar.html
+var openapiHTMLScalar []byte
+
+//go:embed embedded/spotlight.html
+var openapiHTMLSpotlight []byte
 
 // Get metrics
 // (GET /info/metrics)
@@ -47,18 +51,32 @@ func (a APIHandler) GetOpenAPIJSON(w http.ResponseWriter, r *http.Request) {
 
 // Get openapi HTML
 // (GET /info/openapi.html)
-func (a APIHandler) GetOpenAPIHTML(w http.ResponseWriter, r *http.Request) {
+func (a APIHandler) GetOpenAPIHTML(w http.ResponseWriter, r *http.Request, queryParams server.GetOpenAPIHTMLParams) {
 	w.Header().Set("Content-Type", "text/html")
-	// replace the base URL in the HTML file
-	// with the actual base URL of the server
 
-	templateString := string(openapiHTML)
+	var renderer string
+	if queryParams.Render != nil {
+		renderer = *queryParams.Render
+	}
+
+	var templateString string
+	switch renderer {
+	case "scalar":
+		templateString = string(openapiHTMLScalar)
+	case "spotlight":
+		templateString = string(openapiHTMLSpotlight)
+	default:
+		templateString = string(openapiHTMLSpotlight)
+	}
 	t, err := template.New("openapi").Parse(templateString)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 
+	// replace the base URL in the HTML file
+	// with the actual base URL of the server
+	// and render to the response writer
 	err = t.Execute(w, map[string]string{
 		"BaseURL": a.BaseURL,
 	})
